# cppapiframework

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  LICENSE  METRICS.md  README.md  SECURITY.md  SECURITY_GUIDE.md  example_metrics_usage.cpp  newjob.sh  security-scan.sh
.github/: dependabot.yml
.github/workflows/: Test, Build and Test-main.yml  codeql.yml  msvc-analysis.yml  security-analysis.yml
scripts/: genjoblist.sh
security-reports/: cppcheck-results.xml  security-summary.txt
src/: boot.cpp  boot.hpp  projstdafx.hpp  short_types.hpp  stdafx.hpp
src/CacheUtils/: Cache.cpp  Cache.hpp
src/Database/: CSql.cpp  CSql.hpp  DBMigrate.cpp  DBMigrate.hpp  GenericDBConnection.hpp  Migration.cpp  Migration.hpp
src/JSON/: StructParser.cpp  StructParser.hpp  StructParserMacros.hpp
src/Mail/: Mail.hpp
src/PistacheCustomHttpHeaders/: LastModified.cpp  LastModified.hpp
src/SSLUtils/: InitClient.hpp
src/Storage/: Storage.cpp  Storage.hpp
src/WebControllers/: CStorageController.cpp  CStorageController.hpp
src/WebInterface/: CController.cpp  CController.hpp  CPistacheEndpoint.cpp  CPistacheEndpoint.hpp  JsonResponse.cpp  JsonResponse.hpp  WebApp.cpp  WebApp.hpp  WebInputValidator.cpp  WebInputValidator.hpp  httpwrappers.cpp  httpwrappers.hpp  pistache.hpp  webstdafx.hpp
src/WebSocket/: HandshakeWebSocket.cpp  HandshakeWebSocket.hpp  RouterHandler.cpp  RouterHandler.hpp  WebSocketHandler.cpp  WebSocketHandler.hpp
src/jobhandler/: JobsHandler.cpp  JobsHandler.hpp  QueueWorker.cpp  QueueWorker.hpp  QueueableJob.cpp  QueueableJob.hpp  SimpleConsoleMetrics.cpp  SimpleConsoleMetrics.hpp  WokerMetricsCallback.cpp  WorkerMetricsCallback.hpp
src/queues/: GenericQueue.cpp  GenericQueue.hpp  LuaScripts.hpp  RedisQueue.cpp  RedisQueue.hpp  StdQueue.cpp  StdQueue.hpp
src/utils/: BorrowPool.hpp  CConfig.cpp  CConfig.hpp  CHttpPool.cpp  CHttpPool.hpp  CLog.cpp  CLog.hpp  ChronoUtils.hpp  CircleMTIO.hpp  ControllerInputModifier.hpp  ControllerInputValidator.hpp  DocAPI.cpp  DocAPI.hpp  ExceptUnwindExec.hpp  InputValidators.cpp  InputValidators.hpp  LogDefines.hpp  LogUtils.hpp  NestedJson.hpp  PocoJsonStringify.cpp  PocoJsonStringify.hpp  ProcessHelper.cpp  ProcessHelper.hpp  RedisService.cpp  RedisService.hpp  Result.hpp  ResultMacros.hpp  ScopedStreamRedirect.hpp  ShortValidationsName.hpp  StrFormat.hpp  Strutils.hpp  Validator.cpp  Validator.hpp  map.h  primitivepairhash.hpp  stringviewstream.hpp
tests/: CMakeLists.txt  Json2StructTest.cpp  Json2StructTest.hpp  allocation_count.cpp  allocation_count.hpp  test_ExceptUnwindExec.cpp  test_borrowpool.cpp  test_cacheutils.cpp  test_httpwrappers.cpp  test_inputvalidators.cpp  test_istringstream.cpp  test_jobs.cpp  test_json2struct.cpp  test_log.cpp  test_nestedjsonget.cpp  test_pocojsonstringify.cpp  test_redisqueue.cpp  test_redisservice.cpp  test_result.cpp  test_strformat.cpp  test_strutils.cpp  test_strutils_cnpj.cpp  test_worker_metrics.cpp  test_wsinput.cpp
